--- a/mos.yml
+++ b/mos.yml
@@ -38,6 +38,7 @@ libs:
   - origin: https://github.com/mongoose-os-libs/arduino-compat
   - origin: https://github.com/mongoose-os-libs/arduino-spi
   - origin: https://github.com/chrismilleruk/mos-lib-epd2in9b
+    version: master
 
 # Used by the mos tool to catch mos binaries incompatible with this file format
 manifest_version: 2017-09-29
