Clean up mos.yml

--- a/mos.yml
+++ b/mos.yml
@@ -23,11 +23,10 @@ filesystem:
 
 # Custom configuration entries, settable via "device configuration"
 config_schema:
-  # - ["epd", "o", {title: "E-paper display settings"}]
-  # - ["epd.busy_gpio", "i", 4, {title: "Busy Pin"}]
-  # - ["epd.rst_gpio", "i", 16, {title: "Reset Pin"}]
-  # - ["epd.dc_gpio", "i", 17, {title: "Data/Command Pin"}]
-  # - ["epd.cs_gpio", "i", 5, {title: "CS Pin"}]
+  # - ["epd.busy_gpio", 4] // Busy Pin
+  # - ["epd.rst_gpio", 16] // Reset Pin
+  # - ["epd.dc_gpio", 17]  // Data/Command Pin
+  # - ["epd.cs_gpio", 5]   // CS Pin
   - ["spi.enable", true]
 
 libs:
@@ -38,7 +37,6 @@ libs:
   - origin: https://github.com/mongoose-os-libs/arduino-compat
   - origin: https://github.com/mongoose-os-libs/arduino-spi
   - origin: https://github.com/chrismilleruk/mos-lib-epd2in9b
-    version: master
 
 # Used by the mos tool to catch mos binaries incompatible with this file format
 manifest_version: 2017-09-29
